@@ -1,0 +1,4 @@
+Significance: patch
+Type: add
+
+Add merchant branding logo to print receipt
